--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.17.1",
+    "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^5.17.1",
-    "@mui/x-charts": "^6.0.0-alpha.17",
+    "@mui/x-charts": "^6.19.8",
     "@mui/x-data-grid": "^6.18.1",
+    "@mui/x-data-grid-pro": "^8.3.1",
     "@mui/x-date-pickers": "^6.18.1",
     "@mui/x-tree-view": "^6.17.0",
     "@react-oauth/google": "^0.11.1",
