--- a/client/package.json
+++ b/client/package.json
@@ -42,8 +42,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start --trace-deprecation",    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
