--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.17.1",
-    "@mui/lab": "^7.0.0-beta.12",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.17.1",
     "@mui/x-charts": "^6.19.8",
     "@mui/x-data-grid": "^6.18.1",
@@ -35,6 +35,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "reselect": "^4.1.8",
     "styled-components": "^6.1.0",
@@ -42,7 +43,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start --trace-deprecation",    "build": "react-scripts build",
+    "start": "react-scripts start --trace-deprecation",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
