--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "reselect": "^4.1.8",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.0",
     "tailwindcss": "^3.3.5",
     "web-vitals": "^2.1.4"
