--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "mongoose": "^8.14.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "name": "server",
   "version": "1.0.0",
