--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.14.1",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
